added exclusive site to quiz spanish

--- a/public/index.html
+++ b/public/index.html
@@ -292,7 +292,7 @@
       </div>
     </div>
 
-    <div id="quiz" class="quiz pt-4 mt-4 pb-4 mb-4">
+    <div id="quiz" class="quiz main pt-4 mt-4 pb-4 mb-4">
       <div class="container">
         <div class="text-center mb-4">
           <img
@@ -430,6 +430,7 @@
           <small class="note" data-lang="ca" style="display:none;">* Actualment disposem dels qüestionaris sense ombrejar, a mesura que els anem publicant s'aniran activant. Segueix els nostres canals de comunicació per saber quan els activem.</small>
         </div>
       </div>
+      <a href="./quiz-es/index.html" data-lang="es">LINK EXTERNO</a>
     </div>
 
     <div id="about" class="questions pt-4 mt-4 pb-4 mb-4 container text-left">
