removed people from footer

--- a/public/quiz-es/index.html
+++ b/public/quiz-es/index.html
@@ -15,7 +15,7 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <meta property="og:title" content="Design2FightCOVID19" />
-  <meta property="og:image" content="../../assets/img/movileBack.png"/>
+  <meta property="og:image" content="http://cdn.onsanity.com/images/d2fc19/quiz-logo.png"/>
   <meta property="og:url" content="//design2fightcovid19.com/" />
   <meta name="description"
     content="Uno de los principales retos de la pandemia producida por el COVID19 es mantener a la ciudadanía informada mediante contenido fiable. Para ello el equipo de @D2FC19 nos proponemos ayudar a las personas en la adquisición de conocimiento sobre el COVID19 para que pueda actuar autónomamente y sienta que su conocimiento está avalado por sus profesionales de salud" />
@@ -49,9 +49,9 @@
 <body class="text-center">
   <div class="d-flex w-100 h-100 mx-auto flex-column">
     <header class="container d-flex justify-content-between">
-      <div class="logo" href="/">
+      <a class="logo" href="/">
         #Design2FightCOVID
-      </div>
+      </a>
 
       <nav>
         <div class="nav-content">
@@ -147,9 +147,9 @@
 
   <div id="footer" class="footer pt-4 mt-4 pb-4 mb-4 container text-center">
     <small>
-      Hecho con <i class="fas fa-heart"></i>
+      Hecho con <i class="fas fa-heart help"></i>
       <br/>
-      2020 | #Design2FightCOVID19
+      2020 | <a href="/">#Design2FightCOVID19</a>
     </small>
   </div>
 </body>
