--- a/public/index.html
+++ b/public/index.html
@@ -542,8 +542,8 @@
 
   <div id="footer" class="footer pt-4 mt-4 pb-4 mb-4 container text-center">
     <small>
-      Hecho con <i class="fas fa-heart"></i> por (en orden alfabético):<br/>
-      <a
+      Hecho con <i class="fas fa-heart help"></i>
+      <!-- <a
         href="https://abeldb.com/"
         target="_blank"
       >
@@ -660,8 +660,8 @@
         target="_blank"
       >
         Victor
-      </a>
-      <br/>
+      </a> 
+      <br/> -->
       2020 | #Design2FightCOVID19
     </small>
   </div>
