--- a/public/index.html
+++ b/public/index.html
@@ -394,12 +394,14 @@
           >
             <img class="img-fluid" src="../assets/img/BtnQca2.png" />
           </a>
-          <div
-            class="quiz-button opacity-25"
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/qKoQi8"
+            target="_blank"
             data-lang="ca" style="display:none;"
           >
             <img class="img-fluid" src="../assets/img/BtnQca3.png" />
-          </div>
+          </a>
           <div
             class="quiz-button opacity-25"
             data-lang="ca" style="display:none;"
@@ -431,6 +433,7 @@
         </div>
       </div>
       <a href="./quiz-es/index.html" data-lang="es">LINK EXTERNO</a>
+      <a href="./quiz-ca/index.html" data-lang="ca" style="display:none;">LINK EXTERN</a>
     </div>
 
     <div id="about" class="questions pt-4 mt-4 pb-4 mb-4 container text-left">
@@ -542,7 +545,7 @@
 
   <div id="footer" class="footer pt-4 mt-4 pb-4 mb-4 container text-center">
     <small>
-      Hecho con <i class="fas fa-heart help"></i>
+      Made with <i class="fas fa-heart help"></i>
       <!-- <a
         href="https://abeldb.com/"
         target="_blank"
