--- a/public/quiz-ca/index.html
+++ b/public/quiz-ca/index.html
@@ -18,18 +18,18 @@
   <meta property="og:image" content="http://cdn.onsanity.com/images/d2fc19/quiz-logo.png"/>
   <meta property="og:url" content="//design2fightcovid19.com/" />
   <meta name="description"
-    content="Uno de los principales retos de la pandemia producida por el COVID19 es mantener a la ciudadanía informada mediante contenido fiable. Para ello el equipo de @D2FC19 nos proponemos ayudar a las personas en la adquisición de conocimiento sobre el COVID19 para que pueda actuar autónomamente y sienta que su conocimiento está avalado por sus profesionales de salud" />
+    content="Un dels principals reptes de la pandèmia produïda pel COVID19 és mantenir a la ciutadania informada mitjançant contingut fiable. Per això l'equip de @D2FC19 ens proposem ajudar les persones en l'adquisició de coneixement sobre el COVID19 perquè pugui actuar autònomament i senti que el seu coneixement està avalat pels seus professionals de salut" />
   <meta name="og:description"
-    content="Uno de los principales retos de la pandemia producida por el COVID19 es mantener a la ciudadanía informada mediante contenido fiable. Para ello el equipo de @D2FC19 nos proponemos ayudar a las personas en la adquisición de conocimiento sobre el COVID19 para que pueda actuar autónomamente y sienta que su conocimiento está avalado por sus profesionales de salud" />
+    content="Un dels principals reptes de la pandèmia produïda pel COVID19 és mantenir a la ciutadania informada mitjançant contingut fiable. Per això l'equip de @D2FC19 ens proposem ajudar les persones en l'adquisició de coneixement sobre el COVID19 perquè pugui actuar autònomament i senti que el seu coneixement està avalat pels seus professionals de salut" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@d2fc19" />
   <meta name="twitter:title" content="Design2FightCOVID19" />
   <meta name="twitter:description"
-  content="Uno de los principales retos de la pandemia producida por el COVID19 es mantener a la ciudadanía informada mediante contenido fiable. Para ello el equipo de @D2FC19 nos proponemos ayudar a las personas en la adquisición de conocimiento sobre el COVID19 para que pueda actuar autónomamente y sienta que su conocimiento está avalado por sus profesionales de salud" />
-  <meta name="twitter:image" content="http://cdn.onsanity.com/images/d2fc19/homeTwitterTest.png"/>
+  content="Un dels principals reptes de la pandèmia produïda pel COVID19 és mantenir a la ciutadania informada mitjançant contingut fiable. Per això l'equip de @D2FC19 ens proposem ajudar les persones en l'adquisició de coneixement sobre el COVID19 perquè pugui actuar autònomament i senti que el seu coneixement està avalat pels seus professionals de salut" />
+  <meta name="twitter:image" content="http://cdn.onsanity.com/images/d2fc19/homeTwitterTestCa.png"/>
   <meta name="twitter:creator" content="@d2fc19" />
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-  <script src="../../src/js/quiz-es.js" type="text/javascript"></script>
+  <script src="../../src/js/quiz-ca.js" type="text/javascript"></script>
 
   <!-- Fonts and Material Icons -->
   <link rel="stylesheet" as="font"
@@ -84,61 +84,63 @@
             <h1
               class="pt-2 mb-3 title"
             >
-              Cuestionarios contra la COVID19
+            Qüestionaris contra la COVID19
             </h1>
           </div>
           <div class="d-flex justify-content-center text-center mb-3">
             <p
               class="lead"
             >
-              Para luchar todos contra el coronavirus debemos conocerlo a fondo.<br/>
-              Con estos cuestionarios* podrás comprobar tu conocimiento sobre la COVID-19. Es importante que contestes con sinceridad y recuerda que puedes repetir los cuestionarios tantas veces como lo necesites.<br/>
+              Per lluitar tots contra el coronavirus l'hem de conèixer a fons. <br/>
+              Amb aquests qüestionaris* podràs comprovar el teu coneixement sobre la COVID-19. És important que contestis amb sinceritat i recorda que pots repetir els qüestionaris tantes vegades com ho necessitis.<br/>
             </p>
           </div>
           <div class="d-flex pt-2 flex-wrap justify-content-center">
             <a
-              class="quiz-button link-zoom-in"
-              href="https://onsanity.typeform.com/to/GZUaD6"
-              target="_blank"
-            >
-              <img class="img-fluid" src="../../assets/img/BtnQes1.png" />
-            </a>
-            <a
-              class="quiz-button link-zoom-in"
-              href="https://onsanity.typeform.com/to/fCrg5s"
-              target="_blank"
-            >
-              <img class="img-fluid" src="../../assets/img/BtnQes2.png" />
-            </a>
-            <div
-              class="quiz-button opacity-25"
-            >
-              <img class="img-fluid" src="../../assets/img/BtnQes3.png" />
-            </div>
-            <div
-              class="quiz-button opacity-25"
-            >
-              <img class="img-fluid" src="../../assets/img/BtnQes4.png" />
-            </div>
-            <div
-              class="quiz-button opacity-25"
-            >
-              <img class="img-fluid" src="../../assets/img/BtnQes5.png" />
-            </div>
-            <div
-              class="quiz-button opacity-25"
-            >
-              <img class="img-fluid" src="../../assets/img/BtnQes6.png" />
-            </div>
-            <div
-              class="quiz-button opacity-25"
-            >
-              <img class="img-fluid" src="../../assets/img/BtnQes7.png" />
-            </div>
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/rbE64u"
+            target="_blank"
+          >
+            <img class="img-fluid" src="../../assets/img/BtnQca1.png" />
+          </a>
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/zqE0Ev"
+            target="_blank"
+          >
+            <img class="img-fluid" src="../../assets/img/BtnQca2.png" />
+          </a>
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/qKoQi8"
+            target="_blank"
+          >
+            <img class="img-fluid" src="../../assets/img/BtnQca3.png" />
+          </a>
+          <div
+            class="quiz-button opacity-25"
+          >
+            <img class="img-fluid" src="../../assets/img/BtnQca4.png" />
+          </div>
+          <div
+            class="quiz-button opacity-25"
+          >
+            <img class="img-fluid" src="../../assets/img/BtnQca5.png" />
+          </div>
+          <div
+            class="quiz-button opacity-25"
+          >
+            <img class="img-fluid" src="../../assets/img/BtnQca6.png" />
+          </div>
+          <div
+            class="quiz-button opacity-25"
+          >
+            <img class="img-fluid" src="../../assets/img/BtnQca7.png" />
+          </div>
   
           </div>
           <div class="d-flex justify-content-center text-center mb-3">
-            <small class="note">* Actualmente disponemos de los cuestionarios sin sombrear, a medida que los vayamos publicando se irán activando. Sigue nuestros canales de comunicación para saber cuando los activamos.</small>
+            <small class="note">* Actualment disposem dels qüestionaris sense ombrejar, a mesura que els anem publicant s'aniran activant. Segueix els nostres canals de comunicació per saber quan els activem.</small>
           </div>
         </div>
       </div>
