--- a/public/index.html
+++ b/public/index.html
@@ -347,30 +347,38 @@
           >
             <img class="img-fluid" src="../assets/img/BtnQes2.png" />
           </a>
-          <div
-            class="quiz-button opacity-25"
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/flA1as"
+            target="_blank"
             data-lang="es"
           >
             <img class="img-fluid" src="../assets/img/BtnQes3.png" />
-          </div>
-          <div
-            class="quiz-button opacity-25"
+          </a>
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/lvbXPH"
+            target="_blank"
             data-lang="es"
           >
             <img class="img-fluid" src="../assets/img/BtnQes4.png" />
-          </div>
-          <div
-            class="quiz-button opacity-25"
+          </a>
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/ogPegn"
+            target="_blank"
             data-lang="es"
           >
             <img class="img-fluid" src="../assets/img/BtnQes5.png" />
-          </div>
-          <div
-            class="quiz-button opacity-25"
+          </a>
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/fn9Qwi"
+            target="_blank"
             data-lang="es"
           >
             <img class="img-fluid" src="../assets/img/BtnQes6.png" />
-          </div>
+          </a>
           <div
             class="quiz-button opacity-25"
             data-lang="es"
@@ -402,24 +410,30 @@
           >
             <img class="img-fluid" src="../assets/img/BtnQca3.png" />
           </a>
-          <div
-            class="quiz-button opacity-25"
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/NpaklS"
+            target="_blank"
             data-lang="ca" style="display:none;"
           >
             <img class="img-fluid" src="../assets/img/BtnQca4.png" />
-          </div>
-          <div
-            class="quiz-button opacity-25"
+          </a>
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/x4yKqI"
+            target="_blank"
             data-lang="ca" style="display:none;"
           >
             <img class="img-fluid" src="../assets/img/BtnQca5.png" />
-          </div>
-          <div
-            class="quiz-button opacity-25"
+          </a>
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/fjokw7"
+            target="_blank"
             data-lang="ca" style="display:none;"
           >
             <img class="img-fluid" src="../assets/img/BtnQca6.png" />
-          </div>
+          </a>
           <div
             class="quiz-button opacity-25"
             data-lang="ca" style="display:none;"
