--- a/public/quiz-ca/index.html
+++ b/public/quiz-ca/index.html
@@ -117,21 +117,27 @@
           >
             <img class="img-fluid" src="../../assets/img/BtnQca3.png" />
           </a>
-          <div
-            class="quiz-button opacity-25"
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/NpaklS"
+            target="_blank"
           >
             <img class="img-fluid" src="../../assets/img/BtnQca4.png" />
-          </div>
-          <div
-            class="quiz-button opacity-25"
+          </a>
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/x4yKqI"
+            target="_blank"
           >
             <img class="img-fluid" src="../../assets/img/BtnQca5.png" />
-          </div>
-          <div
-            class="quiz-button opacity-25"
+          </a>
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/fjokw7"
+            target="_blank"
           >
             <img class="img-fluid" src="../../assets/img/BtnQca6.png" />
-          </div>
+          </a>
           <div
             class="quiz-button opacity-25"
           >
