--- a/public/quiz-es/index.html
+++ b/public/quiz-es/index.html
@@ -110,26 +110,34 @@
             >
               <img class="img-fluid" src="../../assets/img/BtnQes2.png" />
             </a>
-            <div
-              class="quiz-button opacity-25"
+            <a
+              class="quiz-button link-zoom-in"
+              href="https://onsanity.typeform.com/to/flA1as"
+              target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/BtnQes3.png" />
-            </div>
-            <div
-              class="quiz-button opacity-25"
+            </a>
+            <a
+              class="quiz-button link-zoom-in"
+              href="https://onsanity.typeform.com/to/lvbXPH"
+              target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/BtnQes4.png" />
-            </div>
-            <div
-              class="quiz-button opacity-25"
+            </a>
+            <a
+              class="quiz-button link-zoom-in"
+              href="https://onsanity.typeform.com/to/ogPegn"
+              target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/BtnQes5.png" />
-            </div>
-            <div
-              class="quiz-button opacity-25"
+            </a>
+            <a
+              class="quiz-button link-zoom-in"
+              href="https://onsanity.typeform.com/to/fn9Qwi"
+              target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/BtnQes6.png" />
-            </div>
+            </a>
             <div
               class="quiz-button opacity-25"
             >
