added trello links & all quiz links

--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
             <img class="img-fluid" src="../assets/img/challenge-mask.png" />
             <div class="project-content">
               <div class="project-text">
-                <p>#D2FC19-MASK</p>
+                <p>#D2FC19MASK</p>
                 <h4 data-lang="es">Mascarilla DIY</h4>
                 <h4 data-lang="ca" style="display:none;">Mascareta DIY</h4>
               </div>
@@ -186,109 +186,152 @@
             <img class="img-fluid" src="../assets/img/challenge-phonendo.png" />
             <div class="project-content">
               <div class="project-text">
-                <p class="fs-9">#D2FC19-PHONENDO</p>
+                <p class="fs-9">#D2FC19PHONENDO</p>
                 <h4 data-lang="es">Fonendo desechable</h4>
                 <h4 data-lang="ca" style="display:none;">Fonendo d'un sol us</h4>
               </div>
             </div>
           </a>
-          <div
-            class="project opacity-75"
+          <a
+            class="project link-zoom-in"
+            href="https://trello.com/d2fc19"
+            target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-new_born.png" />
             <div class="project-content">
               <div class="project-text">
-                <p>#D2FC19-BORN</p>
+                <p>#D2FC19BORN</p>
                 <h4 data-lang="es">Ayuda a padres de recien nacidos</h4>
                 <h4 data-lang="ca" style="display:none;">Ajuda a pares de nou nats</h4>
               </div>
             </div>
-          </div>
-          <div
-            class="project opacity-75"
+          </a>
+          <a
+            class="project link-zoom-in"
+            href="https://trello.com/d2fc19"
+            target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-old.png" />
             <div class="project-content">
               <div class="project-text">
-                <p>#D2FC19-OLDER</p>
+                <p>#D2FC19ELDERLY</p>
                 <h4 data-lang="es">Ayuda a abuelos</h4>
                 <h4 data-lang="ca" style="display:none;">Ajuda a avis</h4>
               </div>
             </div>
-          </div>
-          <div
-            class="project opacity-75"
+          </a>
+          <a
+            class="project link-zoom-in"
+            href="https://trello.com/d2fc19"
+            target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-batas.png" />
             <div class="project-content">
               <div class="project-text">
-                <p>#D2FC19-ROBES</p>
+                <p>#D2FC19BATAS</p>
                 <h4 data-lang="es">Batas impermeables</h4>
                 <h4 data-lang="ca" style="display:none;">Bates impermeables</h4>
               </div>
             </div>
-          </div>
-          <div
-            class="project opacity-75"
+          </a>
+          <a
+            class="project link-zoom-in"
+            href="https://trello.com/d2fc19"
+            target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-cabinas.png" />
             <div class="project-content">
               <div class="project-text">
-                <p>#D2FC19-CABIN</p>
+                <p>#D2FC19CABINAS</p>
                 <h4 data-lang="es">Cabinas presurizadas</h4>
                 <h4 data-lang="ca" style="display:none;">Cabines pressuritzades</h4>
               </div>
             </div>
-          </div>
-          <div
-            class="project opacity-75"
+          </a>
+          <a
+            class="project link-zoom-in"
+            href="https://trello.com/d2fc19"
+            target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-globes.png" />
             <div class="project-content">
               <div class="project-text">
-                <p>#D2FC19-GLOVES</p>
-                <h4 data-lang="es">Guantes DIY</h4>
-                <h4 data-lang="ca" style="display:none;">Guants DIY</h4>
+                <p>#D2FC19INFECCION</p>
+                <h4 data-lang="es">Guia Visual</h4>
+                <h4 data-lang="ca" style="display:none;">Guia Visual</h4>
               </div>
             </div>
-          </div>
-          <div
-            class="project opacity-75"
+          </a>
+          <a
+            class="project link-zoom-in"
+            href="https://trello.com/d2fc19"
+            target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-help.png" />
             <div class="project-content">
               <div class="project-text">
-                <p>#D2FC19-HELP</p>
+                <p>#D2FC19HELP</p>
                 <h4 data-lang="es">Red de ayuda</h4>
                 <h4 data-lang="ca" style="display:none;">Xarxa d'ajuda</h4>
               </div>
             </div>
-          </div>
-          <div
-            class="project opacity-75"
+          </a>
+          <a
+            class="project link-zoom-in"
+            href="https://trello.com/d2fc19"
+            target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-info.png" />
             <div class="project-content">
               <div class="project-text">
-                <p>#D2FC19-INFO</p>
-                <h4 data-lang="es">Información veraz</h4>
-                <h4 data-lang="ca" style="display:none;">Informació veraç</h4>
+                <p>#D2FC19EMOTION</p>
+                <h4 data-lang="es">Soporte Emocional</h4>
+                <h4 data-lang="ca" style="display:none;">Suport Emocional</h4>
               </div>
             </div>
-          </div>
-          <div
-            class="project opacity-75"
+          </a>
+          <a
+            class="project link-zoom-in"
+            href="./quiz-es/index.html"
+            data-lang="es"
+            target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-quiz.png" />
             <div class="project-content">
               <div class="project-text">
-                <p>#D2FC19-QUIZ</p>
-                <h4 data-lang="es">¿Que sabes de la COVID19?</h4>
-                <h4 data-lang="ca" style="display:none;">Que saps de la COVID19?</h4>
+                <p>#D2FC19QUIZ</p>
+                <h4>¿Que sabes de la COVID19?</h4>
               </div>
             </div>
-          </div>
+          </a>
+          <a
+            class="project link-zoom-in"
+            href="./quiz-ca/index.html"
+            data-lang="ca" style="display:none;"
+            target="_blank"
+          >
+            <img class="img-fluid" src="../assets/img/challenge-quiz.png" />
+            <div class="project-content">
+              <div class="project-text">
+                <p>#D2FC19QUIZ</p>
+                <h4>Que saps de la COVID19?</h4>
+              </div>
+            </div>
+          </a>
         </div>
+        <a
+          class="button link-zoom-in h5"
+          href="https://onsanity.typeform.com/to/MvOuAW"
+          target="_blank"
+        >
+          <span data-lang="es">¿Tienes un reto?</span>
+          <span data-lang="ca" style="display:none;">Tens un repte?</span>
+          <br />
+          <strong class="sanitario">
+            <span data-lang="es">Proponlo</span>
+          <span data-lang="ca" style="display:none;">Proposa'l</span>
+          </strong>
+        </a>
       </div>
     </div>
 
@@ -379,12 +422,14 @@
           >
             <img class="img-fluid" src="../assets/img/BtnQes6.png" />
           </a>
-          <div
-            class="quiz-button opacity-25"
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/ZWnp8C"
+            target="_blank"
             data-lang="es"
           >
             <img class="img-fluid" src="../assets/img/BtnQes7.png" />
-          </div>
+        </a>
           <!-- CAT -->
           <a
             class="quiz-button link-zoom-in"
@@ -434,20 +479,20 @@
           >
             <img class="img-fluid" src="../assets/img/BtnQca6.png" />
           </a>
-          <div
-            class="quiz-button opacity-25"
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/PebnUF"
+            target="_blank"
             data-lang="ca" style="display:none;"
           >
             <img class="img-fluid" src="../assets/img/BtnQca7.png" />
-          </div>
+        </a>
         </div>
         <div class="d-flex justify-content-center text-center mb-3">
           <small class="note" data-lang="es">* Actualmente disponemos de los cuestionarios sin sombrear, a medida que los vayamos publicando se irán activando. Sigue nuestros canales de comunicación para saber cuando los activamos.</small>
           <small class="note" data-lang="ca" style="display:none;">* Actualment disposem dels qüestionaris sense ombrejar, a mesura que els anem publicant s'aniran activant. Segueix els nostres canals de comunicació per saber quan els activem.</small>
         </div>
       </div>
-      <a href="./quiz-es/index.html" data-lang="es">LINK EXTERNO</a>
-      <a href="./quiz-ca/index.html" data-lang="ca" style="display:none;">LINK EXTERN</a>
     </div>
 
     <div id="about" class="questions pt-4 mt-4 pb-4 mb-4 container text-left">
