--- a/public/quiz-ca/index.html
+++ b/public/quiz-ca/index.html
@@ -138,12 +138,13 @@
           >
             <img class="img-fluid" src="../../assets/img/BtnQca6.png" />
           </a>
-          <div
-            class="quiz-button opacity-25"
+          <a
+            class="quiz-button link-zoom-in"
+            href="https://onsanity.typeform.com/to/PebnUF"
+            target="_blank"
           >
             <img class="img-fluid" src="../../assets/img/BtnQca7.png" />
-          </div>
-  
+          </a>
           </div>
           <div class="d-flex justify-content-center text-center mb-3">
             <small class="note">* Actualment disposem dels qüestionaris sense ombrejar, a mesura que els anem publicant s'aniran activant. Segueix els nostres canals de comunicació per saber quan els activem.</small>
