--- a/public/quiz-es/index.html
+++ b/public/quiz-es/index.html
@@ -138,11 +138,13 @@
             >
               <img class="img-fluid" src="../../assets/img/BtnQes6.png" />
             </a>
-            <div
-              class="quiz-button opacity-25"
+            <a
+              class="quiz-button link-zoom-in"
+              href="https://onsanity.typeform.com/to/ZWnp8C"
+              target="_blank"
             >
               <img class="img-fluid" src="../../assets/img/BtnQes7.png" />
-            </div>
+            </a>
   
           </div>
           <div class="d-flex justify-content-center text-center mb-3">
