--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
             </a>
             <a
               class="button link-zoom-in h5"
-              href="https://join.slack.com/t/designfightcovid-19/shared_invite/zt-cy0wgv5c-nX5Oy15Pl50hmLE2wODnvw"
+              href="https://onsanity.typeform.com/to/gvRzS3"
               target="_blank"
             >
               <span data-lang="es">Participa en los retos</span>
@@ -157,16 +157,16 @@
         </div>
         <div class="d-flex justify-content-center text-center mb-3">
           <p class="lead" data-lang="es">
-            Estos son los proyectos que actualmente tenemos activos. Los hay que ya tienen alguna solución otros no. Si quieres participar no dudes en entrar en nuestro <a class="link-zoom-in" href="https://join.slack.com/t/designfightcovid-19/shared_invite/zt-cy0wgv5c-nX5Oy15Pl50hmLE2wODnvw" target="_blank"> Slack <i class="fas fa-external-link-alt"></i></a>. A medida que vamos recibiendo proyectos, los iremos publicando aquí, pero toda la información la tenemos en Slack.
+            Estos son los proyectos que actualmente tenemos activos. Los hay que ya tienen alguna solución otros no. Si quieres participar no dudes en entrar en nuestro <a class="link-zoom-in" href="https://designfightcovid-19.slack.com/" target="_blank"> Slack <i class="fas fa-external-link-alt"></i></a> (Registrate antes <a href="https://onsanity.typeform.com/to/gvRzS3" target="">aquí</a>). A medida que vamos recibiendo proyectos, los iremos publicando aquí, pero toda la información la tenemos en Slack.
           </p>
           <p class="lead" data-lang="ca" style="display:none;">
-            Aquests són els projectes que actualment tenim actius. En hi ha que ja tenen alguna solució altres no. Si vols participar no dubtis a entrar al nostre <a class="link-zoom-in" href="https://join.slack.com/t/designfightcovid-19/shared_invite/zt-cy0wgv5c-nX5Oy15Pl50hmLE2wODnvw" target="_blank">Slack <i class="fas fa-external-link-alt"></i></a>. A mesura que anem rebent projectes, els anirem publicant aquí, però tota la informació la tenim en Slack.
+            Aquests són els projectes que actualment tenim actius. En hi ha que ja tenen alguna solució altres no. Si vols participar no dubtis a entrar al nostre <a class="link-zoom-in" href="https://designfightcovid-19.slack.com/" target="_blank">Slack <i class="fas fa-external-link-alt"></i></a> (Registra't abans <a href="https://onsanity.typeform.com/to/gvRzS3" target="">aquí</a>). A mesura que anem rebent projectes, els anirem publicant aquí, però tota la informació la tenim en Slack.
           </p>
         </div>
         <div class="d-flex pt-5 flex-wrap justify-content-center">
           <a
             class="project link-zoom-in"
-            href="https://www.instagram.com/p/B-NWzg9I-vS/"
+            href="https://trello.com/b/HBGqZjS2"
             target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-mask.png" />
@@ -180,7 +180,7 @@
           </a>
           <a
             class="project link-zoom-in"
-            href="https://www.instagram.com/p/B-PSK8soprf/?utm_source=ig_web_copy_link"
+            href="https://trello.com/b/B3FEggU2"
             target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-phonendo.png" />
@@ -194,7 +194,7 @@
           </a>
           <a
             class="project link-zoom-in"
-            href="https://trello.com/d2fc19"
+            href="https://trello.com/b/Sp4xlclz"
             target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-new_born.png" />
@@ -208,7 +208,7 @@
           </a>
           <a
             class="project link-zoom-in"
-            href="https://trello.com/d2fc19"
+            href="https://trello.com/b/ToyQXcLs"
             target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-old.png" />
@@ -222,7 +222,7 @@
           </a>
           <a
             class="project link-zoom-in"
-            href="https://trello.com/d2fc19"
+            href="https://trello.com/b/MDa0iieH"
             target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-batas.png" />
@@ -236,7 +236,7 @@
           </a>
           <a
             class="project link-zoom-in"
-            href="https://trello.com/d2fc19"
+            href="https://trello.com/b/lY8iTmAZ"
             target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-cabinas.png" />
@@ -250,7 +250,7 @@
           </a>
           <a
             class="project link-zoom-in"
-            href="https://trello.com/d2fc19"
+            href="https://trello.com/b/bqJ44DQ7"
             target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-globes.png" />
@@ -264,7 +264,7 @@
           </a>
           <a
             class="project link-zoom-in"
-            href="https://trello.com/d2fc19"
+            href="https://trello.com/b/NWrIKx9R"
             target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-help.png" />
@@ -278,7 +278,7 @@
           </a>
           <a
             class="project link-zoom-in"
-            href="https://trello.com/d2fc19"
+            href="https://trello.com/b/QIcRN79h"
             target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-info.png" />
@@ -429,7 +429,7 @@
             data-lang="es"
           >
             <img class="img-fluid" src="../assets/img/BtnQes7.png" />
-        </a>
+          </a>
           <!-- CAT -->
           <a
             class="quiz-button link-zoom-in"
@@ -486,7 +486,7 @@
             data-lang="ca" style="display:none;"
           >
             <img class="img-fluid" src="../assets/img/BtnQca7.png" />
-        </a>
+          </a>
         </div>
         <div class="d-flex justify-content-center text-center mb-3">
           <small class="note" data-lang="es">* Actualmente disponemos de los cuestionarios sin sombrear, a medida que los vayamos publicando se irán activando. Sigue nuestros canales de comunicación para saber cuando los activamos.</small>
