back to slack link

--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
             </a>
             <a
               class="button link-zoom-in h5"
-              href="https://onsanity.typeform.com/to/gvRzS3"
+              href="https://join.slack.com/t/designfightcovid-19/shared_invite/zt-cy0wgv5c-nX5Oy15Pl50hmLE2wODnvw"
               target="_blank"
             >
               <span data-lang="es">Participa en los retos</span>
@@ -157,10 +157,10 @@
         </div>
         <div class="d-flex justify-content-center text-center mb-3">
           <p class="lead" data-lang="es">
-            Estos son los proyectos que actualmente tenemos activos. Los hay que ya tienen alguna solución otros no. Si quieres participar no dudes en entrar en nuestro <a class="link-zoom-in" href="https://designfightcovid-19.slack.com/" target="_blank"> Slack <i class="fas fa-external-link-alt"></i></a> (Registrate antes <a href="https://onsanity.typeform.com/to/gvRzS3" target="">aquí</a>). A medida que vamos recibiendo proyectos, los iremos publicando aquí, pero toda la información la tenemos en Slack.
+            Estos son los proyectos que actualmente tenemos activos. Los hay que ya tienen alguna solución otros no. Si quieres participar no dudes en entrar en nuestro <a class="link-zoom-in" href="https://designfightcovid-19.slack.com/" target="_blank"> Slack <i class="fas fa-external-link-alt"></i></a>. A medida que vamos recibiendo proyectos, los iremos publicando aquí, pero toda la información la tenemos en Slack.
           </p>
           <p class="lead" data-lang="ca" style="display:none;">
-            Aquests són els projectes que actualment tenim actius. En hi ha que ja tenen alguna solució altres no. Si vols participar no dubtis a entrar al nostre <a class="link-zoom-in" href="https://designfightcovid-19.slack.com/" target="_blank">Slack <i class="fas fa-external-link-alt"></i></a> (Registra't abans <a href="https://onsanity.typeform.com/to/gvRzS3" target="">aquí</a>). A mesura que anem rebent projectes, els anirem publicant aquí, però tota la informació la tenim en Slack.
+            Aquests són els projectes que actualment tenim actius. En hi ha que ja tenen alguna solució altres no. Si vols participar no dubtis a entrar al nostre <a class="link-zoom-in" href="https://designfightcovid-19.slack.com/" target="_blank">Slack <i class="fas fa-external-link-alt"></i></a>. A mesura que anem rebent projectes, els anirem publicant aquí, però tota la informació la tenim en Slack.
           </p>
         </div>
         <div class="d-flex pt-5 flex-wrap justify-content-center">
@@ -236,15 +236,15 @@
           </a>
           <a
             class="project link-zoom-in"
-            href="https://trello.com/b/lY8iTmAZ"
+            href="https://trello.com/b/NWrIKx9R"
             target="_blank"
           >
-            <img class="img-fluid" src="../assets/img/challenge-cabinas.png" />
+            <img class="img-fluid" src="../assets/img/challenge-help.png" />
             <div class="project-content">
               <div class="project-text">
-                <p>#D2FC19CABINAS</p>
-                <h4 data-lang="es">Cabinas presurizadas</h4>
-                <h4 data-lang="ca" style="display:none;">Cabines pressuritzades</h4>
+                <p>#D2FC19HELP</p>
+                <h4 data-lang="es">Red de ayuda</h4>
+                <h4 data-lang="ca" style="display:none;">Xarxa d'ajuda</h4>
               </div>
             </div>
           </a>
@@ -264,15 +264,15 @@
           </a>
           <a
             class="project link-zoom-in"
-            href="https://trello.com/b/NWrIKx9R"
+            href="https://trello.com/b/lY8iTmAZ"
             target="_blank"
           >
-            <img class="img-fluid" src="../assets/img/challenge-help.png" />
+            <img class="img-fluid" src="../assets/img/challenge-cabinas.png" />
             <div class="project-content">
               <div class="project-text">
-                <p>#D2FC19HELP</p>
-                <h4 data-lang="es">Red de ayuda</h4>
-                <h4 data-lang="ca" style="display:none;">Xarxa d'ajuda</h4>
+                <p>#D2FC19CABINAS</p>
+                <h4 data-lang="es">Cabinas presurizadas</h4>
+                <h4 data-lang="ca" style="display:none;">Cabines pressuritzades</h4>
               </div>
             </div>
           </a>
