d2fc19born videos home

--- a/public/index.html
+++ b/public/index.html
@@ -253,7 +253,7 @@
             href="https://trello.com/b/bqJ44DQ7"
             target="_blank"
           >
-            <img class="img-fluid" src="../assets/img/challenge-globes.png" />
+            <img class="img-fluid" src="../assets/img/challenge-infeccion.png" />
             <div class="project-content">
               <div class="project-text">
                 <p>#D2FC19INFECCION</p>
@@ -332,6 +332,8 @@
           <span data-lang="ca" style="display:none;">Proposa'l</span>
           </strong>
         </a>
+        <a href="./d2fc19born-ca/index.html" style="display:none;"></a>
+        <a href="./d2fc19born-es/index.html" style="display:none;"></a>
       </div>
     </div>
 
@@ -601,7 +603,7 @@
       </div>
     </div>
   </div>
-
+  
   <div id="footer" class="footer pt-4 mt-4 pb-4 mb-4 container text-center">
     <small>
       Made with <i class="fas fa-heart help"></i>
