d2fc19born og data

--- a/public/d2fc19born-es/index.html
+++ b/public/d2fc19born-es/index.html
@@ -14,18 +14,18 @@
   <link rel="mask-icon" href="../../assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <meta property="og:title" content="Design2FightCOVID19" />
+  <meta property="og:title" content="Revisión del bebe con 6 meses" />
   <meta property="og:image" content="../../assets/img/challenge-new_born.png"/>
   <meta property="og:url" content="//design2fightcovid19.com/d2fc19born-ca/" />
   <meta name="description"
-    content="Un dels principals reptes de la pandèmia produïda pel COVID19 és mantenir a la ciutadania informada mitjançant contingut fiable. Per això l'equip de @D2FC19 ens proposem ajudar les persones en l'adquisició de coneixement sobre el COVID19 perquè pugui actuar autònomament i senti que el seu coneixement està avalat pels seus professionals de salut" />
+    content="Ayudar a los padres con bebés de 6 meses de edad que tienen que gestionar desde casa el progreso en la alimentación de sus bebés." />
   <meta name="og:description"
-    content="Un dels principals reptes de la pandèmia produïda pel COVID19 és mantenir a la ciutadania informada mitjançant contingut fiable. Per això l'equip de @D2FC19 ens proposem ajudar les persones en l'adquisició de coneixement sobre el COVID19 perquè pugui actuar autònomament i senti que el seu coneixement està avalat pels seus professionals de salut" />
+    content="Ayudar a los padres con bebés de 6 meses de edad que tienen que gestionar desde casa el progreso en la alimentación de sus bebés." />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@d2fc19" />
-  <meta name="twitter:title" content="Design2FightCOVID19" />
+  <meta name="twitter:title" content="Revisión del bebe con 6 meses" />
   <meta name="twitter:description"
-  content="Un dels principals reptes de la pandèmia produïda pel COVID19 és mantenir a la ciutadania informada mitjançant contingut fiable. Per això l'equip de @D2FC19 ens proposem ajudar les persones en l'adquisició de coneixement sobre el COVID19 perquè pugui actuar autònomament i senti que el seu coneixement està avalat pels seus professionals de salut" />
+  content="Ayudar a los padres con bebés de 6 meses de edad que tienen que gestionar desde casa el progreso en la alimentación de sus bebés." />
   <meta name="twitter:image" content="../../assets/img/challenge-new_born.png"/>
   <meta name="twitter:creator" content="@d2fc19" />
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
