--- a/public/d2fc19born-ca/index.html
+++ b/public/d2fc19born-ca/index.html
@@ -14,18 +14,18 @@
   <link rel="mask-icon" href="../../assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <meta property="og:title" content="Design2FightCOVID19" />
+  <meta property="og:title" content="Revisió del Nadó amb 6 mesos" />
   <meta property="og:image" content="../../assets/img/challenge-new_born.png"/>
   <meta property="og:url" content="//design2fightcovid19.com/d2fc19born-ca/" />
   <meta name="description"
-    content="Un dels principals reptes de la pandèmia produïda pel COVID19 és mantenir a la ciutadania informada mitjançant contingut fiable. Per això l'equip de @D2FC19 ens proposem ajudar les persones en l'adquisició de coneixement sobre el COVID19 perquè pugui actuar autònomament i senti que el seu coneixement està avalat pels seus professionals de salut" />
+    content="Ajudar els pares amb nadons de 6 mesos d'edat que han de gestionar des de casa el progrés en l'alimentació dels seus nadons." />
   <meta name="og:description"
-    content="Un dels principals reptes de la pandèmia produïda pel COVID19 és mantenir a la ciutadania informada mitjançant contingut fiable. Per això l'equip de @D2FC19 ens proposem ajudar les persones en l'adquisició de coneixement sobre el COVID19 perquè pugui actuar autònomament i senti que el seu coneixement està avalat pels seus professionals de salut" />
+    content="Ajudar els pares amb nadons de 6 mesos d'edat que han de gestionar des de casa el progrés en l'alimentació dels seus nadons." />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@d2fc19" />
-  <meta name="twitter:title" content="Design2FightCOVID19" />
+  <meta name="twitter:title" content="Revisió del Nadó amb 6 mesos" />
   <meta name="twitter:description"
-  content="Un dels principals reptes de la pandèmia produïda pel COVID19 és mantenir a la ciutadania informada mitjançant contingut fiable. Per això l'equip de @D2FC19 ens proposem ajudar les persones en l'adquisició de coneixement sobre el COVID19 perquè pugui actuar autònomament i senti que el seu coneixement està avalat pels seus professionals de salut" />
+  content="Ajudar els pares amb nadons de 6 mesos d'edat que han de gestionar des de casa el progrés en l'alimentació dels seus nadons." />
   <meta name="twitter:image" content="../../assets/img/challenge-new_born.png"/>
   <meta name="twitter:creator" content="@d2fc19" />
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
