--- a/public/d2fc19born-ca/index.html
+++ b/public/d2fc19born-ca/index.html
@@ -72,21 +72,31 @@
     </header>
 
     <main role="main" class="cover container mt-4">
-      <div class="d-flex justify-content-center">
         <h1
           class="pt-2 mb-3 title"
         >
           Revisió del nadó amb 6 mesos
         </h1>
-      </div>
-      <div id="quiz" class="quiz pt-4 mt-4 pb-4 mb-4">
-        <div class="container">
-          <div class="d-flex justify-content-center">
-            <iframe src="https://player.vimeo.com/video/405484014" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-          </div>
+    </main>
+    <div id="video" class="video pt-md-4 mt-md-4 pb-md-4 mb-md-4">
+      <div class="container">
+        <div class="d-flex justify-content-center">
+          <iframe src="https://player.vimeo.com/video/405484014" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
         </div>
       </div>
-    </main>
+    </div>
+    <div id="action" class="action container text-center">
+      <a
+        class="button link-zoom-in h5"
+        href="mailto:infancia@casap.cat"
+      >
+        Tens dubtes?
+        <br />
+        <strong class="sanitario">
+          infancia@casap.cat
+        </strong>
+      </a>
+    </div>
   </div>
 
   <div id="footer" class="footer pt-4 mt-4 pb-4 mb-4 container text-center">
