--- a/public/index.html
+++ b/public/index.html
@@ -194,15 +194,29 @@
           </a>
           <a
             class="project link-zoom-in"
-            href="https://trello.com/b/Sp4xlclz"
+            href="./d2fc19born-es/index.html"
             target="_blank"
+            data-lang="es"
           >
             <img class="img-fluid" src="../assets/img/challenge-new_born.png" />
             <div class="project-content">
               <div class="project-text">
                 <p>#D2FC19BORN</p>
-                <h4 data-lang="es">Ayuda a padres de recien nacidos</h4>
-                <h4 data-lang="ca" style="display:none;">Ajuda a pares de nou nats</h4>
+                <h4>Ayuda a padres de recien nacidos</h4>
+              </div>
+            </div>
+          </a>
+          <a
+            class="project link-zoom-in"
+            href="./d2fc19born-ca/index.html"
+            target="_blank"
+            data-lang="ca" style="display:none;"
+          >
+            <img class="img-fluid" src="../assets/img/challenge-new_born.png" />
+            <div class="project-content">
+              <div class="project-text">
+                <p>#D2FC19BORN</p>
+                <h4>Ajuda a pares de nou nats</h4>
               </div>
             </div>
           </a>
@@ -332,8 +346,6 @@
           <span data-lang="ca" style="display:none;">Proposa'l</span>
           </strong>
         </a>
-        <a href="./d2fc19born-ca/index.html" style="display:none;"></a>
-        <a href="./d2fc19born-es/index.html" style="display:none;"></a>
       </div>
     </div>
 
