added new projects

--- a/public/index.html
+++ b/public/index.html
@@ -262,7 +262,7 @@
               </div>
             </div>
           </a>
-          <a
+          <!-- <a
             class="project link-zoom-in"
             href="https://trello.com/b/bqJ44DQ7"
             target="_blank"
@@ -275,8 +275,8 @@
                 <h4 data-lang="ca" style="display:none;">Guia Visual</h4>
               </div>
             </div>
-          </a>
-          <a
+          </a> -->
+          <!-- <a
             class="project link-zoom-in"
             href="https://trello.com/b/lY8iTmAZ"
             target="_blank"
@@ -289,7 +289,7 @@
                 <h4 data-lang="ca" style="display:none;">Cabines pressuritzades</h4>
               </div>
             </div>
-          </a>
+          </a> -->
           <a
             class="project link-zoom-in"
             href="https://trello.com/b/QIcRN79h"
@@ -329,6 +329,34 @@
               <div class="project-text">
                 <p>#D2FC19QUIZ</p>
                 <h4>Que saps de la COVID19?</h4>
+              </div>
+            </div>
+          </a>
+          <a
+            class="project link-zoom-in"
+            href="https://trello.com/b/QiJMBwBP"
+            target="_blank"
+          >
+            <img class="img-fluid" src="../assets/img/challenge-game.png" />
+            <div class="project-content">
+              <div class="project-text">
+                <p>#D2FC19GAME</p>
+                <h4 data-lang="es">Juego Educativo</h4>
+                <h4 data-lang="ca" style="display:none;">Joc Educatiu</h4>
+              </div>
+            </div>
+          </a>
+          <a
+            class="project link-zoom-in"
+            href="https://trello.com/b/0nybtcvz"
+            target="_blank"
+          >
+            <img class="img-fluid" src="../assets/img/challenge-passport.png" />
+            <div class="project-content">
+              <div class="project-text">
+                <p>#D2FC19PASSPORT</p>
+                <h4 data-lang="es">Pasaporte Inmunológico</h4>
+                <h4 data-lang="ca" style="display:none;">Passaport Immunològic</h4>
               </div>
             </div>
           </a>
