added psicoFight page

--- a/public/index.html
+++ b/public/index.html
@@ -292,7 +292,7 @@
           </a>
           <a
             class="project link-zoom-in"
-            href="https://trello.com/b/QIcRN79h"
+            href="./psico-es/index.html"
             target="_blank"
           >
             <img class="img-fluid" src="../assets/img/challenge-info.png" />
