added next cases

--- a/public/psico-es/index.html
+++ b/public/psico-es/index.html
@@ -126,6 +126,70 @@
                 </div>
               </div>
             </a>
+            <div class="case">
+              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
+              <div class="case-content">
+                <div class="case-text">
+                  <p>FAMILIAR EN UNA RESIDENCIA</p>
+                </div>
+              </div>
+            </div>
+            <div class="case">
+              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
+              <div class="case-content">
+                <div class="case-text">
+                  <p>DISCUSIONES<br>DE PAREJA</p>
+                </div>
+              </div>
+            </div>
+            <div class="case">
+              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
+              <div class="case-content">
+                <div class="case-text">
+                  <p>FAMILIAR EN UNA RESIDENCIA</p>
+                </div>
+              </div>
+            </div>
+            <div class="case">
+              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
+              <div class="case-content">
+                <div class="case-text">
+                  <p>PÉRDIDA<br>DE EMPLEO</p>
+                </div>
+              </div>
+            </div>
+            <div class="case">
+              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
+              <div class="case-content">
+                <div class="case-text">
+                  <p>SENTIRSE AISLADO SIENDO EXTRANJERO</p>
+                </div>
+              </div>
+            </div>
+            <div class="case">
+              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
+              <div class="case-content">
+                <div class="case-text">
+                  <p>SECUELAS TRAS EL CONFINAMIENTO</p>
+                </div>
+              </div>
+            </div>
+            <div class="case">
+              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
+              <div class="case-content">
+                <div class="case-text">
+                  <p>YA LO HARÉ<br>MAÑANA</p>
+                </div>
+              </div>
+            </div>
+            <div class="case">
+              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
+              <div class="case-content">
+                <div class="case-text">
+                  <p>MI HIJO CON NECESIDADES ESPECIALES, ENCERRADO</p>
+                </div>
+              </div>
+            </div>
           </div>
         
         </div>
