some css fixes, added project

--- a/public/index.html
+++ b/public/index.html
@@ -262,34 +262,6 @@
               </div>
             </div>
           </a>
-          <!-- <a
-            class="project link-zoom-in"
-            href="https://trello.com/b/bqJ44DQ7"
-            target="_blank"
-          >
-            <img class="img-fluid" src="../assets/img/challenge-infeccion.png" />
-            <div class="project-content">
-              <div class="project-text">
-                <p>#D2FC19INFECCION</p>
-                <h4 data-lang="es">Guia Visual</h4>
-                <h4 data-lang="ca" style="display:none;">Guia Visual</h4>
-              </div>
-            </div>
-          </a> -->
-          <!-- <a
-            class="project link-zoom-in"
-            href="https://trello.com/b/lY8iTmAZ"
-            target="_blank"
-          >
-            <img class="img-fluid" src="../assets/img/challenge-cabinas.png" />
-            <div class="project-content">
-              <div class="project-text">
-                <p>#D2FC19CABINAS</p>
-                <h4 data-lang="es">Cabinas presurizadas</h4>
-                <h4 data-lang="ca" style="display:none;">Cabines pressuritzades</h4>
-              </div>
-            </div>
-          </a> -->
           <a
             class="project link-zoom-in"
             href="./psico-es/index.html"
@@ -360,6 +332,48 @@
               </div>
             </div>
           </a>
+          <a
+            class="project link-zoom-in"
+            href="https://trello.com/b/bqJ44DQ7"
+            target="_blank"
+          >
+            <img class="img-fluid" src="../assets/img/challenge-infeccion.png" />
+            <div class="project-content">
+              <div class="project-text">
+                <p>#D2FC19INFECCION</p>
+                <h4 data-lang="es">Guia Visual</h4>
+                <h4 data-lang="ca" style="display:none;">Guia Visual</h4>
+              </div>
+            </div>
+          </a>
+          <a
+            class="project link-zoom-in"
+            href="https://trello.com/b/SkmsAGbH"
+            target="_blank"
+          >
+            <img class="img-fluid" src="../assets/img/challenge-residuos.png" />
+            <div class="project-content">
+              <div class="project-text">
+                <p>#D2FC19RESIDUOS</p>
+                <h4 data-lang="es">Gestión de residuos</h4>
+                <h4 data-lang="ca" style="display:none;">Gestió de residus</h4>
+              </div>
+            </div>
+          </a>
+          <!-- <a
+            class="project link-zoom-in"
+            href="https://trello.com/b/lY8iTmAZ"
+            target="_blank"
+          >
+            <img class="img-fluid" src="../assets/img/challenge-cabinas.png" />
+            <div class="project-content">
+              <div class="project-text">
+                <p>#D2FC19CABINAS</p>
+                <h4 data-lang="es">Cabinas presurizadas</h4>
+                <h4 data-lang="ca" style="display:none;">Cabines pressuritzades</h4>
+              </div>
+            </div>
+          </a> -->
         </div>
         <a
           class="button link-zoom-in h5"
