removed quiz from home, added links to resources

--- a/public/quiz-ca/index.html
+++ b/public/quiz-ca/index.html
@@ -92,7 +92,7 @@
               class="lead"
             >
               Per lluitar tots contra el coronavirus l'hem de conèixer a fons. <br/>
-              Amb aquests qüestionaris* podràs comprovar el teu coneixement sobre la COVID-19. És important que contestis amb sinceritat i recorda que pots repetir els qüestionaris tantes vegades com ho necessitis.<br/>
+              Amb aquests qüestionaris podràs comprovar el teu coneixement sobre la COVID-19. És important que contestis amb sinceritat i recorda que pots repetir els qüestionaris tantes vegades com ho necessitis.<br/>
             </p>
           </div>
           <div class="d-flex pt-2 flex-wrap justify-content-center">
@@ -146,9 +146,9 @@
             <img class="img-fluid" src="../../assets/img/BtnQca7.png" />
           </a>
           </div>
-          <div class="d-flex justify-content-center text-center mb-3">
+          <!-- <div class="d-flex justify-content-center text-center mb-3">
             <small class="note">* Actualment disposem dels qüestionaris sense ombrejar, a mesura que els anem publicant s'aniran activant. Segueix els nostres canals de comunicació per saber quan els activem.</small>
-          </div>
+          </div> -->
         </div>
       </div>
     </main>
