--- a/public/index.html
+++ b/public/index.html
@@ -264,48 +264,6 @@
           </a>
           <a
             class="project link-zoom-in"
-            href="./psico-es/index.html"
-            target="_blank"
-          >
-            <img class="img-fluid" src="../assets/img/challenge-info.png" />
-            <div class="project-content">
-              <div class="project-text">
-                <p>#D2FC19EMOTION</p>
-                <h4 data-lang="es">Soporte Emocional</h4>
-                <h4 data-lang="ca" style="display:none;">Suport Emocional</h4>
-              </div>
-            </div>
-          </a>
-          <a
-            class="project link-zoom-in"
-            href="./quiz-es/index.html"
-            data-lang="es"
-            target="_blank"
-          >
-            <img class="img-fluid" src="../assets/img/challenge-quiz.png" />
-            <div class="project-content">
-              <div class="project-text">
-                <p>#D2FC19QUIZ</p>
-                <h4>¿Que sabes de la COVID19?</h4>
-              </div>
-            </div>
-          </a>
-          <a
-            class="project link-zoom-in"
-            href="./quiz-ca/index.html"
-            data-lang="ca" style="display:none;"
-            target="_blank"
-          >
-            <img class="img-fluid" src="../assets/img/challenge-quiz.png" />
-            <div class="project-content">
-              <div class="project-text">
-                <p>#D2FC19QUIZ</p>
-                <h4>Que saps de la COVID19?</h4>
-              </div>
-            </div>
-          </a>
-          <a
-            class="project link-zoom-in"
             href="https://trello.com/b/QiJMBwBP"
             target="_blank"
           >
@@ -391,26 +349,20 @@
       </div>
     </div>
 
-    <div id="quiz" class="quiz main pt-4 mt-4 pb-4 mb-4">
+    <div id="resources" class="resources main pt-4 mt-4 pb-4 mb-4">
       <div class="container">
-        <div class="text-center mb-4">
-          <img
-            class="img-fluid img-3"
-            src="../assets/img/quiz-logo.png"
-          >
-        </div>
         <div class="d-flex justify-content-center">
           <h1
             class="pt-2 mb-3 title"
             data-lang="es"
           >
-            Cuestionarios contra la COVID19
+            Recursos Publicados
           </h1>
           <h1
             class="pt-2 mb-3 title"
             data-lang="ca" style="display:none;"
           >
-            Qüestionaris contra la COVID19
+            Recursos Publicats
           </h1>
         </div>
         <div class="d-flex justify-content-center text-center mb-3">
@@ -418,136 +370,65 @@
             class="lead"
             data-lang="es"
           >
-            Para luchar todos contra el coronavirus debemos conocerlo a fondo.<br/>
-            Con estos cuestionarios* podrás comprobar tu conocimiento sobre la COVID-19. Es importante que contestes con sinceridad y recuerda que puedes repetir los cuestionarios tantas veces como lo necesites.<br/>
+            Estos son algunos de los recursos online que hemos publicado<br/>
           </p>
           <p
             class="lead"
             data-lang="ca" style="display:none;"
           >
-            Per lluitar tots contra el coronavirus l'hem de conèixer a fons. <br/>
-            Amb aquests qüestionaris* podràs comprovar el teu coneixement sobre la COVID-19. És important que contestis amb sinceritat i recorda que pots repetir els qüestionaris tantes vegades com ho necessitis.<br/>
+            Aquests són alguns dels recursos en línia que hem publicat <br/>
           </p>
         </div>
         <div class="d-flex pt-2 flex-wrap justify-content-center">
           <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/GZUaD6"
+            class="resource-button link-zoom-in"
+            href="./quiz-es/index.html"
             target="_blank"
             data-lang="es"
           >
-            <img class="img-fluid" src="../assets/img/BtnQes1.png" />
+            <img
+              class="img-fluid img-3"
+              src="../assets/img/quiz-logo.png"
+            />
           </a>
           <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/fCrg5s"
+            class="resource-button link-zoom-in"
+            href="./quiz-ca/index.html"
+            target="_blank"
+            data-lang="ca" style="display:none;"
+          >
+            <img
+              class="img-fluid img-3"
+              src="../assets/img/quiz-logo.png"
+            />
+          </a>
+          <a
+            class="resource-button link-zoom-in"
+            href="./psico-es/index.html"
             target="_blank"
             data-lang="es"
           >
-            <img class="img-fluid" src="../assets/img/BtnQes2.png" />
+            <img
+              class="img-fluid img-3"
+              src="../assets/img/PF_logo.png"
+            />
           </a>
           <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/flA1as"
-            target="_blank"
-            data-lang="es"
-          >
-            <img class="img-fluid" src="../assets/img/BtnQes3.png" />
-          </a>
-          <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/lvbXPH"
-            target="_blank"
-            data-lang="es"
-          >
-            <img class="img-fluid" src="../assets/img/BtnQes4.png" />
-          </a>
-          <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/ogPegn"
-            target="_blank"
-            data-lang="es"
-          >
-            <img class="img-fluid" src="../assets/img/BtnQes5.png" />
-          </a>
-          <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/fn9Qwi"
-            target="_blank"
-            data-lang="es"
-          >
-            <img class="img-fluid" src="../assets/img/BtnQes6.png" />
-          </a>
-          <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/ZWnp8C"
-            target="_blank"
-            data-lang="es"
-          >
-            <img class="img-fluid" src="../assets/img/BtnQes7.png" />
-          </a>
-          <!-- CAT -->
-          <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/rbE64u"
+            class="resource-button link-zoom-in"
+            href="./psico-es/index.html"
             target="_blank"
             data-lang="ca" style="display:none;"
           >
-            <img class="img-fluid" src="../assets/img/BtnQca1.png" />
-          </a>
-          <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/zqE0Ev"
-            target="_blank"
-            data-lang="ca" style="display:none;"
-          >
-            <img class="img-fluid" src="../assets/img/BtnQca2.png" />
-          </a>
-          <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/qKoQi8"
-            target="_blank"
-            data-lang="ca" style="display:none;"
-          >
-            <img class="img-fluid" src="../assets/img/BtnQca3.png" />
-          </a>
-          <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/NpaklS"
-            target="_blank"
-            data-lang="ca" style="display:none;"
-          >
-            <img class="img-fluid" src="../assets/img/BtnQca4.png" />
-          </a>
-          <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/x4yKqI"
-            target="_blank"
-            data-lang="ca" style="display:none;"
-          >
-            <img class="img-fluid" src="../assets/img/BtnQca5.png" />
-          </a>
-          <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/fjokw7"
-            target="_blank"
-            data-lang="ca" style="display:none;"
-          >
-            <img class="img-fluid" src="../assets/img/BtnQca6.png" />
-          </a>
-          <a
-            class="quiz-button link-zoom-in"
-            href="https://onsanity.typeform.com/to/PebnUF"
-            target="_blank"
-            data-lang="ca" style="display:none;"
-          >
-            <img class="img-fluid" src="../assets/img/BtnQca7.png" />
+            <img
+              class="img-fluid img-3"
+              src="../assets/img/PF_logo.png"
+            />
           </a>
         </div>
-        <div class="d-flex justify-content-center text-center mb-3">
-          <small class="note" data-lang="es">* Actualmente disponemos de los cuestionarios sin sombrear, a medida que los vayamos publicando se irán activando. Sigue nuestros canales de comunicación para saber cuando los activamos.</small>
-          <small class="note" data-lang="ca" style="display:none;">* Actualment disposem dels qüestionaris sense ombrejar, a mesura que els anem publicant s'aniran activant. Segueix els nostres canals de comunicació per saber quan els activem.</small>
-        </div>
+        <!-- <div class="d-flex justify-content-center text-center mb-3">
+          <small class="note" data-lang="es">* ...</small>
+          <small class="note" data-lang="ca" style="display:none;">* ...</small>
+        </div> -->
       </div>
     </div>
 
