--- a/public/quiz-es/index.html
+++ b/public/quiz-es/index.html
@@ -92,7 +92,7 @@
               class="lead"
             >
               Para luchar todos contra el coronavirus debemos conocerlo a fondo.<br/>
-              Con estos cuestionarios* podrás comprobar tu conocimiento sobre la COVID-19. Es importante que contestes con sinceridad y recuerda que puedes repetir los cuestionarios tantas veces como lo necesites.<br/>
+              Con estos cuestionarios podrás comprobar tu conocimiento sobre la COVID-19. Es importante que contestes con sinceridad y recuerda que puedes repetir los cuestionarios tantas veces como lo necesites.<br/>
             </p>
           </div>
           <div class="d-flex pt-2 flex-wrap justify-content-center">
@@ -147,9 +147,9 @@
             </a>
   
           </div>
-          <div class="d-flex justify-content-center text-center mb-3">
+          <!-- <div class="d-flex justify-content-center text-center mb-3">
             <small class="note">* Actualmente disponemos de los cuestionarios sin sombrear, a medida que los vayamos publicando se irán activando. Sigue nuestros canales de comunicación para saber cuando los activamos.</small>
-          </div>
+          </div> -->
         </div>
       </div>
     </main>
