added 2 more Psico cases

--- a/public/psico-es/index.html
+++ b/public/psico-es/index.html
@@ -126,6 +126,30 @@
                 </div>
               </div>
             </a>
+            <a
+              class="case link-zoom-in"
+              href="https://onsanity.typeform.com/to/BeAOyJ"
+              target="_blank"
+            >
+              <img class="img-fluid" src="../../assets/img/PF_caso9.png" />
+              <div class="case-content">
+                <div class="case-text">
+                  <p>SENTIRSE AISLADO SIENDO EXTRANJERO</p>
+                </div>
+              </div>
+            </a>
+            <a
+              class="case link-zoom-in"
+              href="https://onsanity.typeform.com/to/Dub8A2"
+              target="_blank"
+            >
+              <img class="img-fluid" src="../../assets/img/PF_caso11.png" />
+              <div class="case-content">
+                <div class="case-text">
+                  <p>SECUELAS TRAS EL CONFINAMIENTO</p>
+                </div>
+              </div>
+            </a>
             <div class="case">
               <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
               <div class="case-content">
@@ -147,22 +171,6 @@
               <div class="case-content">
                 <div class="case-text">
                   <p>PÉRDIDA<br>DE EMPLEO</p>
-                </div>
-              </div>
-            </div>
-            <div class="case">
-              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
-              <div class="case-content">
-                <div class="case-text">
-                  <p>SENTIRSE AISLADO SIENDO EXTRANJERO</p>
-                </div>
-              </div>
-            </div>
-            <div class="case">
-              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
-              <div class="case-content">
-                <div class="case-text">
-                  <p>SECUELAS TRAS EL CONFINAMIENTO</p>
                 </div>
               </div>
             </div>
