four more psico cases

--- a/public/psico-es/index.html
+++ b/public/psico-es/index.html
@@ -150,38 +150,54 @@
                 </div>
               </div>
             </a>
-            <div class="case">
-              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
+            <a
+              class="case link-zoom-in"
+              href="https://onsanity.typeform.com/to/pJt3Mw"
+              target="_blank"
+            >
+              <img class="img-fluid" src="../../assets/img/PF_caso8.png" />
               <div class="case-content">
                 <div class="case-text">
                   <p>FAMILIAR EN UNA RESIDENCIA</p>
                 </div>
               </div>
-            </div>
-            <div class="case">
-              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
+            </a>
+            <a
+              class="case link-zoom-in"
+              href="https://onsanity.typeform.com/to/T1W6jl"
+              target="_blank"
+            >
+              <img class="img-fluid" src="../../assets/img/PF_caso6.png" />
               <div class="case-content">
                 <div class="case-text">
                   <p>DISCUSIONES<br>DE PAREJA</p>
                 </div>
               </div>
-            </div>
-            <div class="case">
-              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
+            </a>
+            <a
+              class="case link-zoom-in"
+              href="https://onsanity.typeform.com/to/JsBPfz"
+              target="_blank"
+            >
+              <img class="img-fluid" src="../../assets/img/PF_caso7.png" />
               <div class="case-content">
                 <div class="case-text">
                   <p>PÉRDIDA<br>DE EMPLEO</p>
                 </div>
               </div>
-            </div>
-            <div class="case">
-              <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
+            </a>
+            <a
+              class="case link-zoom-in"
+              href="https://onsanity.typeform.com/to/pYKuKs"
+              target="_blank"
+            >
+              <img class="img-fluid" src="../../assets/img/PF_caso10.png" />
               <div class="case-content">
                 <div class="case-text">
                   <p>YA LO HARÉ<br>MAÑANA</p>
                 </div>
               </div>
-            </div>
+            </a>
             <div class="case">
               <img class="img-fluid" src="../../assets/img/PF_caso0yg.png" />
               <div class="case-content">
